--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,3 @@
 {
-  "extends": ["config:base", "docker:disable", ":skipStatusChecks"],
-  "automerge": true,
-  "major": {
-    "automerge": false
-  }
+  "extends": ["config:base"]
 }
