--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "currency.js": "^1.2.1",
     "micro": "^9.3.3",
     "micro-cors": "^0.1.1",
-    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.23",
     "node-fetch": "^2.3.0",
     "stripe": "^6.28.0"
   },
