fix: upgrade micro, moment, node-fetch, stripe, sem-rel + pin dep's

--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
     }
   },
   "dependencies": {
-    "currency.js": "^1.2.1",
-    "micro": "^9.3.3",
-    "micro-cors": "^0.1.1",
-    "moment-timezone": "^0.5.23",
-    "node-fetch": "^2.3.0",
-    "stripe": "^7.0.0"
+    "currency.js": "1.2.1",
+    "micro": "9.3.4",
+    "micro-cors": "0.1.1",
+    "moment-timezone": "0.5.25",
+    "node-fetch": "2.6.0",
+    "stripe": "7.1.0"
   },
   "devDependencies": {
     "husky": "2.3.0",
@@ -48,7 +48,7 @@
     "micro-dev": "3.0.0",
     "prettier": "1.17.1",
     "pretty-quick": "1.11.0",
-    "semantic-release": "15.13.12",
+    "semantic-release": "15.13.14",
     "ts-jest": "24.0.2"
   },
   "publishConfig": {
